# fastmail-CLI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Plan.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/plans/: 2026-01-15-fastmail-cli-mvp.md  2026-01-16-jmap-blob-rfc9404.md  2026-01-16-jmap-sharing-rfc9670.md  2026-01-16-setup-and-human-output-design.md  2026-01-16-webdav-caldav-carddav-support.md  2026-01-24-jmap-rfc8620-8621-completion.md
fastmail-cli/: Cargo.toml
fastmail-cli/src/: main.rs  output.rs
fastmail-cli/src/commands/: blob.rs  calendar.rs  contacts.rs  files.rs  mod.rs  setup.rs  sharing.rs
fastmail-client/: Cargo.toml
fastmail-client/src/: caldav.rs  carddav.rs  client.rs  config.rs  dav.rs  lib.rs  masked_email.rs  whitelist.rs
jmap-client/: Cargo.toml
jmap-client/src/: blob.rs  client.rs  error.rs  lib.rs  types.rs
jmap-client/src/http/: mod.rs  reqwest.rs
ref-docs/: caldav-rfc4791.txt  carddav-rfc6352.txt  fastmail-dev.md  jmap-blob-rfc9404.txt  jmap-rfc8620.txt  jmap-sharing-rfc9670.txt  jmap.md  webdav-rfc4918.txt
