[package]
name = "fastmail-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "fastmail"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fastmail-client = { path = "../fastmail-client" }
mime_guess = "2.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
atty = "0.2"
dialoguer = "0.11"
console = "0.15"
dirs = "6.0"

[dev-dependencies]
wiremock = "0.6"
