[package]
name = "jmap-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
