[package]
name = "jmap-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt"] }
